gccida/g0/precompute_register_parameters
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/precompute_register_parameters/src/calls.c:1333:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( args[i].tree_value->common.type->block.abstract_origin) >> 1), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/precompute_register_parameters/src/obj/calls.o] Error 1
